--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>pagina para el curso</title>
 </head>
 <body>
     <p>lucas ipsum dolor sit amet consectetur adipisicing elit.computadora  Exercitationem omnis minima pariatur quis asperiores fugiat, a earum harum ratione? Blanditiis eveniet ea iusto debitis fugiat quibusdam inventore lucas amet aliquid hic?
